<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_1"
    tools:context=".activities.SignUp">

    <LinearLayout
        android:id="@+id/layout_logo"
        style="@style/body_padding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_top_logo"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/gebeta_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/text_slogan"
            android:textColor="@color/whitish"
            android:textSize="@dimen/font_normal" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_sign_up_info"
        style="@style/body_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/button_link_sign_in"
        android:layout_marginBottom="@dimen/margin_bottom_sign_up_info_layout"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.hbb20.CountryCodePicker
                android:id="@+id/spinner_country_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:ccp_contentColor="@android:color/white"
                app:ccp_countryPreference="ET"
                app:ccp_defaultNameCode="ET"
                app:ccp_showNameCode="false"
                app:ccp_showPhoneCode="false"
                app:ccp_textSize="@dimen/font_normal"
                />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edit_text_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_phone_number"
                android:inputType="phone"
                android:text="@string/text_my_phone_number"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@android:color/white"
                android:textSize="@dimen/font_normal"
                app:met_baseColor="@android:color/white"
                app:met_primaryColor="@color/colorPrimary" />

        </LinearLayout>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edit_text_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_username"
            android:text="@string/text_my_username"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@android:color/white"
            android:textSize="@dimen/font_normal"
            app:met_baseColor="@android:color/white"
            app:met_iconLeft="@drawable/ic_person_white"
            app:met_primaryColor="@color/colorPrimary" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_password"
            android:inputType="textPassword"
            android:text="@string/text_my_password"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@android:color/white"
            android:textSize="@dimen/font_normal"
            app:met_baseColor="@android:color/white"
            app:met_iconLeft="@drawable/ic_lock_white"
            app:met_primaryColor="@color/colorPrimary" />

    </LinearLayout>

    <Button
        android:id="@+id/button_link_sign_in"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/button_sign_up"
        android:layout_centerHorizontal="true"
        android:text="@string/text_link_sign_in"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/font_normal" />

    <Button
        android:id="@+id/button_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:text="@string/text_sign_up"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/font_normal" />
</RelativeLayout>



